--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragrafos</title>
+    <title>Imagens</title>
 </head>
 <body>
-    <h1>Paragrafos e quebras de linha</h1>
-    <hr>
-    <p>Olá,
-        mundo!
-    </p>
-    <p>Olá, <br> mundo</p> <!--br é quebra de linha-->
-    <p>Simbolos:
-        &reg;
-        &copy; </p>
+    <h1>Testando Imagens</h1>
+    <p>Aqui podemos ver que é possível ultilizar imagens em sites.</p>
+    <img src="HTML5_logo_200.png" alt="Logo HTML">
+    <p>Também podemos ultilizar imagens em sub-pastas.</p>
+    <img src="imagem/CSS3_logo_200.png" alt="Logo CSS">
+    <p>Também podemos exportar imagens por links</p>
+    <img src="https://cdn.iconscout.com/icon/free/png-512/free-javascript-logo-icon-download-in-svg-png-gif-file-formats--html-programming-language-coding-logos-icons-1720087.png?f=webp&w=256" alt="Logo JavaScript">
+
 </body>
 </html>
